Non-unified build fixes, earlyish August 2022 edition, bis https://bugs.webkit.org/show_bug.cgi?id=243724

Unreviewed non-unified build fixes.

* Source/JavaScriptCore/runtime/Completion.cpp: Add missing
  BuiltinNames.h header inclusion.
* Source/WebKit/WebProcess/WebPage/FindController.h: Add missing
  wtf/ComplationHandler.h header inclusion.

Canonical link: https://commits.webkit.org/253259@main